--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Седона - Гостиницы</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="main-body container">
 <header>
@@ -19,7 +19,7 @@
       </li>
     </ul>
     <a href="index.html" aria-label="Ссылка на главную страницу" class="logo">
-      <img src="img/logo.png" alt="Логотип" width="138" height="70">
+      <img src="img/logo-main.png" alt="Логотип" width="138" height="70">
     </a>
     <ul>
       <li>
