Fixed .container & body background-color.

--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body class="main-body container">
-<header>
+<body class="main-body">
+<header class="main-header container">
   <nav class="main-nav">
     <ul>
       <li>
@@ -31,7 +31,7 @@
     </ul>
   </nav>
 </header>
-<main>
+<main class="main container">
   <section class="filter-section">
     <h2 class="visually-hidden">Фильтр</h2>
     <form method="get" action="#" class="filter-form">
@@ -183,7 +183,7 @@
     </article>
   </section>
 </main>
-<footer class="main-footer main-footer_hotels">
+<footer class="main-footer container main-footer_hotels">
   <section class="contact-section">
     <h2 class="visually-hidden">Контактная информация. Тег и телефон</h2>
     <p>#visitsedona</p>
