--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body class="main-body container">
-<header>
+<body class="main-body">
+<header class="main-header container">
   <nav class="main-nav">
     <ul>
       <li>
@@ -29,7 +29,7 @@
     </ul>
   </nav>
 </header>
-<main>
+<main class="main container">
   <h1 class="visually-hidden">Описание Седоны</h1>
   <section class="sedona-intro">
     <div class="sedona-intro__slide">
@@ -181,7 +181,7 @@
     </p>
   </section>
 </main>
-<footer class="main-footer">
+<footer class="main-footer container">
   <section class="contact-section">
     <h2 class="visually-hidden">Контактная информация. Тег и телефон</h2>
     <p>#visitsedona</p>
