Fixed by remarks (2/3)

--- a/catalog.html
+++ b/catalog.html
@@ -134,7 +134,7 @@
     <section class="found-section">
       <h2 class="visually-hidden">Результаты поиска</h2>
       <article>
-        <img src="img/booking-amara.jpg" alt="Amara Resort & SPA" width="135" height="90">
+        <img src="img/booking-amara.jpg" alt="Amara Resort & SPA" width="135" height="90" class="hotel-image">
         <div class="hotel-description">
           <h3>
             <a href="#" aria-label="Ссылка на гостиницу" class="hotel-link">Amara Resort & SPA</a>
@@ -145,12 +145,25 @@
           <a href="#" aria-label="Ссылка забранировать объект" class="button book-button">Забронировать</a>
         </div>
         <div class="hotel-rating">
-          <img src="img/rating-4-stars.png" alt="Рейтинг" width="91" height="17">
+          <ul class="star-list">
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+          </ul>
           <p>Рейтинг: 8,5</p>
         </div>
       </article>
       <article>
-        <img src="img/booking-desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+        <img src="img/booking-desert.jpg" alt="Desert Quail Inn" width="135" height="90" class="hotel-image">
         <div class="hotel-description">
           <h3>
             <a href="#" aria-label="Ссылка на гостиницу" class="hotel-link">Desert Quail Inn</a>
@@ -161,12 +174,22 @@
           <a href="#" aria-label="Ссылка забранировать объект" class="button book-button">Забронировать</a>
         </div>
         <div class="hotel-rating">
-          <img src="img/rating-3-stars.png" alt="Рейтинг" width="66" height="17">
+          <ul class="star-list">
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+          </ul>
           <p>Рейтинг: 8,9</p>
         </div>
       </article>
       <article>
-        <img src="img/booking-villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+        <img src="img/booking-villas.jpg" alt="Villas at Poco Diablo" width="135" height="90" class="hotel-image">
         <div class="hotel-description">
           <h3>
             <a href="#" aria-label="Ссылка на гостиницу" class="hotel-link">Villas at Poco Diablo</a>
@@ -177,7 +200,14 @@
           <a href="#" aria-label="Ссылка забранировать объект" class="button book-button">Забронировать</a>
         </div>
         <div class="hotel-rating">
-          <img src="img/rating-2-stars.png" alt="Рейтинг" width="42" height="17">
+          <ul class="star-list">
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+            <li>
+              <img src="img/rating-star.png" alt="1 звезда рейтинга" width="19" height="17">
+            </li>
+          </ul>
           <p>Рейтинг: 9,2</p>
         </div>
       </article>
