--- a/index.html
+++ b/index.html
@@ -41,28 +41,29 @@
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       </div>
     </section>
-    <section class="reason-section reason-section-1">
+    <section class="reason-section">
       <h2 class="visually-hidden">Причина №1</h2>
       <div class="reason-section-text-div">
         <h3>Настоящий городок</h3>
         <p>&mdash; №1 &mdash;</p>
         <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
+      <img src="img/reason-1.jpg" alt="Мост дьявола" width="800" height="256">
     </section>
     <section class="option-section">
       <h2 class="visually-hidden">Опции</h2>
-      <article>
+      <div>
         <h3>Жильё</h3>
         <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-      </article>
-      <article>
+      </div>
+      <div>
         <h3>Еда</h3>
         <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-      </article>
-      <article>
+      </div>
+      <div>
         <h3>Сувениры</h3>
         <p>Не только китайского, но и местного производства!</p>
-      </article>
+      </div>
     </section>
     <section class="reason-section reason-section-2">
       <h2 class="visually-hidden">Причина №2</h2>
@@ -75,30 +76,30 @@
     </section>
     <section class="other-reasons">
       <h2 class="visually-hidden">Остальные причины</h2>
-      <article>
+      <div>
         <h3>Небольшая площадь</h3>
         <p>&mdash; №3 &mdash;</p>
         <p>Все достопримечательности находятся очень близко</p>
-      </article>
-      <article>
+      </div>
+      <div>
         <h3>Красивая дорога</h3>
         <p>&mdash; №4 &mdash;</p>
         <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      </article>
-      <article>
+      </div>
+      <div>
         <h3>Мало туристов</h3>
         <p>&mdash; №5 &mdash;</p>
         <p>
           Большинство едет в Гранд Каньон<br>
           и толпится там
         </p>
-      </article>
+      </div>
     </section>
     <section class="go-to-us-section">
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки</p>
       <p>и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <a href="#" class="button open-search-form-button">Поиск Гостиницы в Седоне</a>
+      <button type="button" class="button open-search-form-button">Поиск Гостиницы в Седоне</button>
     </section>
     <div class="div-for-search-form">
       <section class="search-form modal modal-show">
