Fixed by remarks: main navigation links.

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   <header class="main-header">
     <nav class="main-nav">
       <ul>
-        <li>
+        <li class="main-nav__left-link">
           <a href="#" aria-label="Ссылка на страницу Информации">Информация</a>
         </li>
-        <li>
+        <li class="main-nav__left-link">
           <a href="#" aria-label="Ссылка на страницу Фото и Видео">Фото и видео</a>
         </li>
-      </ul>
-      <img src="img/logo-main.png" alt="Логотип" width="138" height="70" class="logo">
-      <ul>
         <li>
-          <a href="#" aria-label="Ссылка на страницу Карты сайта" class="map-link">Карта штата</a>
+          <img src="img/logo-main.png" alt="Логотип" width="138" height="70" class="logo">
         </li>
-        <li>
+        <li class="main-nav__right-link">
+          <a href="#" aria-label="Ссылка на страницу Карты сайта">Карта штата</a>
+        </li>
+        <li class="main-nav__right-link">
           <a href="catalog.html" aria-label="Ссылка на страницу Гостиницы">Гостиницы</a>
         </li>
       </ul>
