--- a/catalog.html
+++ b/catalog.html
@@ -10,23 +10,23 @@
 <body class="main-body">
 <div class="container">
   <header class="main-header">
-    <nav class="main-nav">
+    <nav class="main-nav main-nav_catalog">
       <ul>
-        <li>
+        <li class="main-nav__left-link">
           <a href="#" aria-label="Ссылка на страницу Информации">Информация</a>
         </li>
-        <li>
+        <li class="main-nav__left-link">
           <a href="#" aria-label="Ссылка на страницу Фото и Видео">Фото и видео</a>
         </li>
-      </ul>
-      <a href="index.html" aria-label="Ссылка на главную страницу" class="logo">
-        <img src="img/logo-main.png" alt="Логотип" width="138" height="70">
-      </a>
-      <ul>
         <li>
-          <a href="#" aria-label="Ссылка на страницу Карту Штата" class="map-link">Карта штата</a>
+          <a href="index.html" aria-label="Ссылка на главную страницу" class="logo">
+            <img src="img/logo-main.png" alt="Логотип" width="138" height="70">
+          </a>
         </li>
-        <li>
+        <li class="main-nav__right-link">
+          <a href="#" aria-label="Ссылка на страницу Карту Штата">Карта штата</a>
+        </li>
+        <li class="main-nav__right-link">
           <a class="current-link" aria-label="Ссылка на страницу Гостиницы">Гостиницы</a>
         </li>
       </ul>
